public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/client-header-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "18000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "18000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "18000"
  name: ssd-ui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: <SSD.INGRESS>
    http:
      paths:
      - backend:
          service:
            name: ssd-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - <SSD.INGRESS>
    secretName: ssd-ui-ingress
